# hri_body_detect

./: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
config/: 00-defaults.yml
hri_body_detect/: multibody_detector.py  node_pose_detect.py  rs_to_depth.py
hri_body_detect/BoTSORT/: basetrack.py  gmc.py  kalman_filter.py  matching.py  mc_bot_sort.py
launch/: hri_body_detect.launch.py  hri_body_detect_with_args.launch.py
module/: hri_body_detect  hri_body_detect_module.yaml
