<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_body_detect</name>
  <version>3.2.0</version>
  <description>ROS node implementing multibody 2D/3D full-body pose estimation, using Google Mediapipe. Part of ROS4HRI.</description>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
  <author email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</author>
  <author email="ferran.gebelli@pal-robotics.com">Ferran Gebellí</author>
  <license>Apache License 2.0</license>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>
  <maintainer email="ferran.gebelli@pal-robotics.com">Ferran Gebellí</maintainer>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>human_description</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python3-ikpy</exec_depend>

  <!-- PAL packages mediapipe as a debian. If the package is not available, use the standard ROS
  rosdep key (that install mediapipe via pip). 
  -->
  <exec_depend condition="$PAL_DISTRO != ''">python3-mediapipe</exec_depend>
  <exec_depend condition="$PAL_DISTRO == ''">python3-mediapipe-pip</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>python3-lap</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

